@startuml class_diagram
skinparam backgroundColor white
skinparam shadowing false
skinparam dpi 150
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F6FAFE
  BorderColor #2C6FA6
  ArrowColor #2C6FA6
}
hide methods
hide empty members

package "Comptes & sécurité" {
  class Administrateur {
    id : Integer
    nomUtilisateur : String
    email : String
    motDePasseHash : String
    role : AdminRoleEnum
    region_scope : String
    is_active : Boolean
    created_by : Integer
    created_at : DateTime
    last_login : DateTime
  }
  class Utilisateur {
    id : Integer
    nomUtilisateur : String
    email : String
    motDePasseHash : String
    email_verified : Boolean
    source : SourceEnum
    is_active : Boolean
    created_at : DateTime
    last_login : DateTime
  }
  enum AdminRoleEnum {
    SUPER_ADMIN
    ADMIN
    ASSISTANT
  }
  class RefreshToken {
    id : Integer
    entity_type : String
    entity_id : Integer
    token_jti : String
    expires_at : DateTime
  }
  class LoginAttempt {
    id : Integer
    email : String
    entity_type : String
    ip_address : String
    success : Boolean
    attempted_at : DateTime
  }
}

package "Pharmacies & gardes" {
  class Pharmacie {
    id : Integer
    osm_id : BigInteger
    name : String
    governorate : String
    latitude : Float
    longitude : Float
    created_by : Integer
    created_at : DateTime
  }
  class GardeSchedule {
    id : Integer
    date : Date
    pharmacy_name : String
    start_time : String
    end_time : String
    governorate : String
    created_by : Integer
    created_at : DateTime
  }
}

package "Médicaments & audit" {
  class Medicine {
    id : Integer
    code_pct : String
    nom_commercial : String
    dci : String
    ap : String
    created_by : Integer
    created_at : DateTime
  }
  class AuditLog {
    id : Integer
    action : AuditActionEnum
    entity_type : String
    entity_id : Integer
    actor_id : Integer
    actor_type : String
    status : String
    created_at : DateTime
  }
  class SearchEvent {
    id : Integer
    event_type : String
    query_text : String
    location_label : String
    governorate : String
    result_count : Integer
    created_at : DateTime
  }
}

Administrateur ..> AdminRoleEnum

Administrateur "1" <-- "0..*" Pharmacie : created_by
Administrateur "1" <-- "0..*" GardeSchedule : created_by
Administrateur "1" <-- "0..*" Medicine : created_by
Administrateur "1" <-- "0..*" AuditLog : actor_id
Utilisateur "1" .. "0..*" RefreshToken : entity_id/entity_type
Administrateur "1" .. "0..*" RefreshToken : entity_id/entity_type
Pharmacie "0..1" .. "0..*" GardeSchedule : résolution par pharmacy_name

note bottom of GardeSchedule
Pas de clé étrangère directe —
correspondance par nom à la requête.
end note

note right of RefreshToken
Lien polymorphe :
entity_type + entity_id
-> Administrateur ou Utilisateur
end note

note right of LoginAttempt
Trace les tentatives d'authentification
des administrateurs et des utilisateurs
end note
@enduml
